--- a/.env
+++ b/.env
@@ -38,11 +38,18 @@ CI_ENVIRONMENT = development
 #--------------------------------------------------------------------
 
 database.default.hostname = 127.0.0.1
-database.default.database = mohsulth_wasteco
-database.default.username = mohsulth_root
-database.default.password = Satudua34!
+database.default.database = wasteco
+database.default.username = root
+database.default.password =
 database.default.DBDriver = MySQLi
 database.default.DBPrefix =
+
+# database.default.hostname = 127.0.0.1
+# database.default.database = mohsulth_wasteco
+# database.default.username = mohsulth_root
+# database.default.password = Satudua34!
+# database.default.DBDriver = MySQLi
+# database.default.DBPrefix =
 
 # database.tests.hostname = localhost
 # database.tests.database = ci4
